@@ -21,6 +21,8 @@ Changes to Existing Features in 3.26.1
 
 Bugs fixed in 3.26.1
 ====================
+[3380424] System Menu 'X' now closes the Edit/View PropertyPages when the database
+is in R-O mode or the entry is protected.
 [] Filter image in Status bar is no longer replaced by 'Filter1' after changing
 preferences via Manage->Options.
 [] Selecting hexadecimal passwords as the database policy no longer causes validation
